@@ -1752,11 +1752,6 @@ def runTests(start, expanded, num = 0, script = False):
                 print("%s*** test not supported with IceSSL%s" % (prefix, suffix))
                 continue
 
-            # If this is java and we're running ipv6 under windows then skip.
-            if isWin32() and i.find(os.path.join("java","test")) != -1 and args.find("ipv6") != -1:
-                print("%s*** test not supported under windows%s" % (prefix, suffix))
-                continue
-
             # Skip tests not supported by valgrind
             if args.find("valgrind") != -1 and ("novalgrind" in config or args.find("ssl") != -1):
                 print("%s*** test not supported with valgrind%s" % (prefix, suffix))
