@@ -27,6 +27,9 @@ Changes since version 3.4.2
 General Changes
 ===============
 
+- Fixed bug where the UDP client endpoint --interface option would be
+  ignored on some platforms (Windows and OS X).
+
 - IceGrid now enables active connection management for its object
   adapters to allow client connections to be closed automatically when
   inactive.
